--- a/plugins/lgdis/app/views/shelters/index.html.erb
+++ b/plugins/lgdis/app/views/shelters/index.html.erb
@@ -29,7 +29,7 @@
           <%= submit_tag l(:button_new), :kind => "new" %>
         <% end %>
         <% if authorize_for(:shelters, :bulk_update) # 権限判定 %>
-          <%= submit_tag l(:button_bulk_update), :kind => "bulk_update" %>
+          <%= submit_tag l(:button_bulk_update), :kind => "bulk_update", :confirm => l(:text_shelter_update_confirmation) %>
         <% end %>
         <% if authorize_for(:shelters, :ticket) # 権限判定 %>
          <%= submit_tag l(:button_ticket), :kind => "ticket" %>
