--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -66,7 +66,7 @@
           <p>
             <label>情報の配信対象地域</label>
             <%= select_tag 'issue[delivered_area]',
-              options_for_select(@issue_const["delivered_area"].invert, @issue.delivered_area),
+              options_for_select(@area.invert, @issue.delivered_area),
               {:multiple => true, :size =>3} %>
 
           </p>
