チケット照会画面 罫線追加対応

--- a/plugins/lgdis/app/views/issues/show.html.erb
+++ b/plugins/lgdis/app/views/issues/show.html.erb
@@ -68,7 +68,7 @@ end %>
 <%= call_hook(:view_issues_show_details_bottom, :issue => @issue) %>
 </table>
 
-<% if @issue.description? || @issue.attachments.any? -%>
+<% if @issue.description? || @issue.attachments.any? || @issue.xml_control_status -%>
 <hr />
 <% if @issue.description? %>
 <div class="description">
