--- a/plugins/lgdis/app/views/issues/_edit.html.erb
+++ b/plugins/lgdis/app/views/issues/_edit.html.erb
@@ -42,7 +42,7 @@
     <%= f.hidden_field :lock_version %>
     <%= hidden_field_tag 'last_journal_id', params[:last_journal_id] || @issue.last_journal_id %>
     <%= submit_tag l(:button_submit) %>
-    <%= preview_link preview_edit_issue_path(:project_id => @project, :id => @issue), 'issue-form' %>
+    <%#= preview_link preview_edit_issue_path(:project_id => @project, :id => @issue), 'issue-form' %>
 <% end %>
 
 <div id="preview" class="wiki"></div>
