--- a/plugins/lgdis/app/views/issues/new.html.erb
+++ b/plugins/lgdis/app/views/issues/new.html.erb
@@ -19,8 +19,8 @@
     <% end %>
   </div>
 
-  <%= submit_tag l(:button_create) %>
-  <%= submit_tag l(:button_create_and_continue), :name => 'continue' %>
+  <%= submit_tag l(:button_to_deliver) %>
+  <%= submit_tag l(:button_create), :name => 'continue' %>
   <%#= preview_link preview_new_issue_path(:project_id => @project), 'issue-form' %>
 
   <%= javascript_tag "$('#issue_subject').focus();" %>
