4号様式画面のクロスブラウザ対応

--- a/plugins/lgdis/assets/stylesheets/disaster_damage.css
+++ b/plugins/lgdis/assets/stylesheets/disaster_damage.css
@@ -7,6 +7,10 @@
   font-weight: normal;
 }
 
+.fdma_form_4 textarea {
+  width: 97%;
+}
+
 .fdma_form_4 table {
   width: 870px;
   margin-left:auto;
