--- a/plugins/lgdis/app/views/shelters/index.html.erb
+++ b/plugins/lgdis/app/views/shelters/index.html.erb
@@ -26,7 +26,7 @@
     <div class="splitcontentright">
       <p style="text-align: right;">
         <% if authorize_for(:shelters, :new) # 権限判定 %>
-          <%= submit_tag l(:button_new), :kind => "new" %>
+          <%= submit_tag l(:button_new_shelter), :kind => "new" %>
         <% end %>
         <% if authorize_for(:shelters, :ticket) # 権限判定 %>
          <%= submit_tag l(:button_ticket), :kind => "ticket" %>
