--- a/plugins/lgdis/app/views/issues/_form_custom_fields.html.erb
+++ b/plugins/lgdis/app/views/issues/_form_custom_fields.html.erb
@@ -4,6 +4,7 @@
 <% i = 0 %>
 <% split_on = (@issue.custom_field_values.size / 2.0).ceil - 1 %>
 <% @issue.editable_custom_field_values.each do |value| %>
+  <% next if value.custom_field.id == DST_LIST['cf_id_for_show_status'] %>
   <p><%= custom_field_tag_with_label :issue, value, :required => @issue.required_attribute?(value.custom_field_id) %></p>
 <% if i == split_on -%>
 </div><div class="splitcontentright">
