必要なタグも消してしまったので復旧

--- a/plugins/lgdis/app/views/projects/_view_projects_show_right.html.erb
+++ b/plugins/lgdis/app/views/projects/_view_projects_show_right.html.erb
@@ -1,6 +1,7 @@
 <%= stylesheet_link_tag 'statistics', :plugin => 'lgdis' %>
 <ul></ul>
 <h3>統計情報</h3>
+<div class="statistics box">
 <table border="1" width="320">
   <tr>
     <th colspan="2">対象</th>
