デフォルトチェックの設定のないトラッカーでエラーが出ていたバグに対応

--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -11,7 +11,7 @@
 
         <% unless @destination_list.blank? %>
         <% checked = [] %>
-        <% DST_LIST["delivery_place_default"][@issue.tracker_id].each {|i| checked << i["id"] } %>
+        <% (DST_LIST["delivery_place_default"][@issue.tracker_id] || []).each {|i| checked << i["id"] } %>
           <% @destination_list.each do |dest|%>
             <label style="display: block;float: left;"><%= check_box_tag "ext_out_target[]", dest['id'], checked.include?( dest['id'] ) ? true : false %><%= dest['name'] %></label>
           <% end %>
